src/main/resources/japath3/processing/japath-1-test-1.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { start: peg$parsestart },
      peg$startRuleFunction  = peg$parsestart,

      peg$c0 = peg$anyExpectation(),
      peg$c1 = function(p) { return stringify({start: p}); },
      peg$c2 = "(",
      peg$c3 = peg$literalExpectation("(", false),
      peg$c4 = ")",
      peg$c5 = peg$literalExpectation(")", false),
      peg$c6 = "null",
      peg$c7 = peg$literalExpectation("null", false),
      peg$c8 = ":",
      peg$c9 = peg$literalExpectation(":", false),
      peg$c10 = ".",
      peg$c11 = peg$literalExpectation(".", false),
      peg$c12 = "_",
      peg$c13 = peg$literalExpectation("_", false),
      peg$c14 = "self",
      peg$c15 = peg$literalExpectation("self", false),
      peg$c16 = "**",
      peg$c17 = peg$literalExpectation("**", false),
      peg$c18 = "*",
      peg$c19 = peg$literalExpectation("*", false),
      peg$c20 = "&",
      peg$c21 = peg$literalExpectation("&", false),
      peg$c22 = "selector",
      peg$c23 = peg$literalExpectation("selector", false),
      peg$c24 = "\xA7",
      peg$c25 = peg$literalExpectation("\xA7", false),
      peg$c26 = "union",
      peg$c27 = peg$literalExpectation("union", false),
      peg$c28 = "[",
      peg$c29 = peg$literalExpectation("[", false),
      peg$c30 = "]",
      peg$c31 = peg$literalExpectation("]", false),
      peg$c32 = "eq",
      peg$c33 = peg$literalExpectation("eq", false),
      peg$c34 = "neq",
      peg$c35 = peg$literalExpectation("neq", false),
      peg$c36 = "lt",
      peg$c37 = peg$literalExpectation("lt", false),
      peg$c38 = "gt",
      peg$c39 = peg$literalExpectation("gt", false),
      peg$c40 = "le",
      peg$c41 = peg$literalExpectation("le", false),
      peg$c42 = "ge",
      peg$c43 = peg$literalExpectation("ge", false),
      peg$c44 = "match",
      peg$c45 = peg$literalExpectation("match", false),
      peg$c46 = "and",
      peg$c47 = peg$literalExpectation("and", false),
      peg$c48 = "assert",
      peg$c49 = peg$literalExpectation("assert", false),
      peg$c50 = "or",
      peg$c51 = peg$literalExpectation("or", false),
      peg$c52 = "xor",
      peg$c53 = peg$literalExpectation("xor", false),
      peg$c54 = "not",
      peg$c55 = peg$literalExpectation("not", false),
      peg$c56 = "true",
      peg$c57 = peg$literalExpectation("true", false),
      peg$c58 = "false",
      peg$c59 = peg$literalExpectation("false", false),
      peg$c60 = "imply",
      peg$c61 = peg$literalExpectation("imply", false),
      peg$c62 = ",",
      peg$c63 = peg$literalExpectation(",", false),
      peg$c64 = "every",
      peg$c65 = peg$literalExpectation("every", false),
      peg$c66 = "some",
      peg$c67 = peg$literalExpectation("some", false),
      peg$c68 = "filter",
      peg$c69 = peg$literalExpectation("filter", false),
      peg$c70 = "?",
      peg$c71 = peg$literalExpectation("?", false),
      peg$c72 = "cond",
      peg$c73 = peg$literalExpectation("cond", false),
      peg$c74 = "optional",
      peg$c75 = peg$literalExpectation("optional", false),
      peg$c76 = "opt",
      peg$c77 = peg$literalExpectation("opt", false),
      peg$c78 = "type",
      peg$c79 = peg$literalExpectation("type", false),
      peg$c80 = "String",
      peg$c81 = peg$literalExpectation("String", false),
      peg$c82 = "Number",
      peg$c83 = peg$literalExpectation("Number", false),
      peg$c84 = "Boolean",
      peg$c85 = peg$literalExpectation("Boolean", false),
      peg$c86 = "Any",
      peg$c87 = peg$literalExpectation("Any", false),
      peg$c88 = "text",
      peg$c89 = peg$literalExpectation("text", false),
      peg$c90 = "$",
      peg$c91 = peg$literalExpectation("$", false),
      peg$c92 = "def",
      peg$c93 = peg$literalExpectation("def", false),
      peg$c94 = "def-script",
      peg$c95 = peg$literalExpectation("def-script", false),
      peg$c96 = "message",
      peg$c97 = peg$literalExpectation("message", false),
      peg$c98 = "#",
      peg$c99 = peg$literalExpectation("#", false),
      peg$c100 = "property",
      peg$c101 = peg$literalExpectation("property", false),
      peg$c102 = "{",
      peg$c103 = peg$literalExpectation("{", false),
      peg$c104 = "}",
      peg$c105 = peg$literalExpectation("}", false),
      peg$c106 = "new",
      peg$c107 = peg$literalExpectation("new", false),
      peg$c108 = "js",
      peg$c109 = peg$literalExpectation("js", false),
      peg$c110 = "javascript",
      peg$c111 = peg$literalExpectation("javascript", false),
      peg$c112 = "::",
      peg$c113 = peg$literalExpectation("::", false),
      peg$c114 = "j",
      peg$c115 = peg$literalExpectation("j", false),
      peg$c116 = "ava",
      peg$c117 = peg$literalExpectation("ava", false),
      peg$c118 = "..",
      peg$c119 = peg$literalExpectation("..", false),
      peg$c120 = "-",
      peg$c121 = peg$literalExpectation("-", false),
      peg$c122 = /^[eE]/,
      peg$c123 = peg$classExpectation(["e", "E"], false, false),
      peg$c124 = "+",
      peg$c125 = peg$literalExpectation("+", false),
      peg$c126 = "0",
      peg$c127 = peg$literalExpectation("0", false),
      peg$c128 = /^[1-9]/,
      peg$c129 = peg$classExpectation([["1", "9"]], false, false),
      peg$c130 = /^[0-9]/,
      peg$c131 = peg$classExpectation([["0", "9"]], false, false),
      peg$c132 = "'",
      peg$c133 = peg$literalExpectation("'", false),
      peg$c134 = "\\'",
      peg$c135 = peg$literalExpectation("\\'", false),
      peg$c136 = /^[^']/,
      peg$c137 = peg$classExpectation(["'"], true, false),
      peg$c138 = "\"",
      peg$c139 = peg$literalExpectation("\"", false),
      peg$c140 = "\\\"",
      peg$c141 = peg$literalExpectation("\\\"", false),
      peg$c142 = /^[^"]/,
      peg$c143 = peg$classExpectation(["\""], true, false),
      peg$c144 = "\"\"\"",
      peg$c145 = peg$literalExpectation("\"\"\"", false),
      peg$c146 = /^[a-zA-Z_]/,
      peg$c147 = peg$classExpectation([["a", "z"], ["A", "Z"], "_"], false, false),
      peg$c148 = /^[a-zA-Z0-9_]/,
      peg$c149 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false),
      peg$c150 = "call",
      peg$c151 = peg$literalExpectation("call", false),
      peg$c152 = "java",
      peg$c153 = peg$literalExpectation("java", false),
      peg$c154 = "error",
      peg$c155 = peg$literalExpectation("error", false),
      peg$c156 = "`",
      peg$c157 = peg$literalExpectation("`", false),
      peg$c158 = "\\`",
      peg$c159 = peg$literalExpectation("\\`", false),
      peg$c160 = /^[^`]/,
      peg$c161 = peg$classExpectation(["`"], true, false),
      peg$c162 = peg$otherExpectation("whitespace"),
      peg$c163 = /^[ \t\n\r]/,
      peg$c164 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false),
      peg$c165 = "//",
      peg$c166 = peg$literalExpectation("//", false),
      peg$c167 = /^[\r\n]/,
      peg$c168 = peg$classExpectation(["\r", "\n"], false, false),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsesimpleExpr();
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 !== peg$FAILED) {
          s4 = peg$currPos;
          peg$silentFails++;
          if (input.length > peg$currPos) {
            s5 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c0); }
          }
          peg$silentFails--;
          if (s5 === peg$FAILED) {
            s4 = void 0;
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
          if (s4 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c1(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsesimpleExpr() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 40) {
      s1 = peg$c2;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c3); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        s3 = peg$parsesimpleExpr();
        if (s3 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 41) {
            s4 = peg$c4;
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c5); }
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$parse_();
            if (s5 !== peg$FAILED) {
              s1 = [s1, s2, s3, s4, s5];
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      if (input.substr(peg$currPos, 4) === peg$c6) {
        s1 = peg$c6;
        peg$currPos += 4;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c7); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$currPos;
        peg$silentFails++;
        s3 = peg$parseIdentifier();
        peg$silentFails--;
        if (s3 === peg$FAILED) {
          s2 = void 0;
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parse_();
          if (s3 !== peg$FAILED) {
            s1 = [s1, s2, s3];
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$parseNumber();
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parseString();
          if (s1 !== peg$FAILED) {
            s2 = peg$currPos;
            peg$silentFails++;
            s3 = peg$currPos;
            s4 = peg$parse_();
            if (s4 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 58) {
                s5 = peg$c8;
                peg$currPos++;
              } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c9); }
              }
              if (s5 !== peg$FAILED) {
                s4 = [s4, s5];
                s3 = s4;
              } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
            peg$silentFails--;
            if (s3 === peg$FAILED) {
              s2 = void 0;
            } else {
              peg$currPos = s2;
              s2 = peg$FAILED;
            }
            if (s2 !== peg$FAILED) {
              s1 = [s1, s2];
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        }
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parsepath();
          if (s1 !== peg$FAILED) {
            s2 = peg$currPos;
            peg$silentFails++;
            s3 = peg$currPos;
            s4 = peg$parse_();
            if (s4 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 58) {
                s5 = peg$c8;
                peg$currPos++;
              } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c9); }
              }
              if (s5 !== peg$FAILED) {
                s4 = [s4, s5];
                s3 = s4;
              } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
            peg$silentFails--;
            if (s3 === peg$FAILED) {
              s2 = void 0;
            } else {
              peg$currPos = s2;
              s2 = peg$FAILED;
            }
            if (s2 !== peg$FAILED) {
              s1 = [s1, s2];
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
          if (s0 === peg$FAILED) {
            s0 = peg$parseassignment();
          }
        }
      }
    }

    return s0;
  }

  function peg$parseassignment() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$parsepath();
    if (s1 === peg$FAILED) {
      s1 = peg$parseString();
    }
    if (s1 !== peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 58) {
        s2 = peg$c8;
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c9); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 !== peg$FAILED) {
          s4 = peg$parsesimpleExpr();
          if (s4 !== peg$FAILED) {
            s1 = [s1, s2, s3, s4];
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsepath() {
    var s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = peg$parsestepExpr();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 46) {
        s5 = peg$c10;
        peg$currPos++;
      } else {
        s5 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c11); }
      }
      if (s5 !== peg$FAILED) {
        s6 = peg$parse_();
        if (s6 !== peg$FAILED) {
          s5 = [s5, s6];
          s4 = s5;
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
      } else {
        peg$currPos = s4;
        s4 = peg$FAILED;
      }
      if (s4 !== peg$FAILED) {
        s5 = peg$parsestepExpr();
        if (s5 !== peg$FAILED) {
          s4 = [s4, s5];
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 46) {
          s5 = peg$c10;
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c11); }
        }
        if (s5 !== peg$FAILED) {
          s6 = peg$parse_();
          if (s6 !== peg$FAILED) {
            s5 = [s5, s6];
            s4 = s5;
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
        if (s4 !== peg$FAILED) {
          s5 = peg$parsestepExpr();
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if (s2 !== peg$FAILED) {
        s1 = [s1, s2];
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsestepExpr() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parsestep();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parsesubscript();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parsesubscript();
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parsefilter();
        if (s3 === peg$FAILED) {
          s3 = null;
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parsebinding();
          if (s4 === peg$FAILED) {
            s4 = null;
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$parsesubExpr();
            if (s5 === peg$FAILED) {
              s5 = null;
            }
            if (s5 !== peg$FAILED) {
              s1 = [s1, s2, s3, s4, s5];
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsestep() {
    var s0;

    s0 = peg$parseself();
    if (s0 === peg$FAILED) {
      s0 = peg$parsewild();
      if (s0 === peg$FAILED) {
        s0 = peg$parseselector();
        if (s0 === peg$FAILED) {
          s0 = peg$parseunion();
          if (s0 === peg$FAILED) {
            s0 = peg$parsecomparison();
            if (s0 === peg$FAILED) {
              s0 = peg$parseboolExpr();
              if (s0 === peg$FAILED) {
                s0 = peg$parsefilter();
                if (s0 === peg$FAILED) {
                  s0 = peg$parsecond();
                  if (s0 === peg$FAILED) {
                    s0 = peg$parseoptional();
                    if (s0 === peg$FAILED) {
                      s0 = peg$parsetype();
                      if (s0 === peg$FAILED) {
                        s0 = peg$parsetext();
                        if (s0 === peg$FAILED) {
                          s0 = peg$parsevar();
                          if (s0 === peg$FAILED) {
                            s0 = peg$parseargNumber();
                            if (s0 === peg$FAILED) {
                              s0 = peg$parseexprDef();
                              if (s0 === peg$FAILED) {
                                s0 = peg$parsescriptDef();
                                if (s0 === peg$FAILED) {
                                  s0 = peg$parsemessage();
                                  if (s0 === peg$FAILED) {
                                    s0 = peg$parseexprAppl();
                                    if (s0 === peg$FAILED) {
                                      s0 = peg$parsecreate();
                                      if (s0 === peg$FAILED) {
                                        s0 = peg$parsestruct();
                                        if (s0 === peg$FAILED) {
                                          s0 = peg$parsearray();
                                          if (s0 === peg$FAILED) {
                                            s0 = peg$parsefuncCall();
                                            if (s0 === peg$FAILED) {
                                              s0 = peg$parseproperty();
                                            }
                                          }
                                        }
                                      }
                                    }
                                  }
                                }
                              }
                            }
                          }
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseself() {
    var s0, s1, s2, s3;
